--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.3.1",
+    "react-stripe": "^0.1.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
