--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
+    "stripe": "^6.13.0",
     "yarn": "^1.12.1"
   },
   "devDependencies": {
