--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "ajv": "^6.5.5",
     "axios": "^0.15.3",
     "compression": "^1.7.3",
@@ -44,6 +49,8 @@
     "express": "^4.16.3",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
+    "material-design-icons": "^3.0.1",
+    "mdbootstrap": "^4.7.0",
     "morgan": "^1.8.1",
     "nodemailer": "^4.6.8",
     "nodemailer-smtp-transport": "^2.7.4",
